CASSSIDECAR-226 Adding endpoint for verifying files post data copy during live migration